--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +8,22 @@
     <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
+
 <body>
     <h1>Counter-Example</h1>
+    <br />
+
+    <nav class="bar">
+        <h2 id="logo">Logo</h2>
+        <h2 id="menu">Menu</h2>
+    </nav>
+    <button id="increment">+</button>
+
+    <h2 id="number">0</h2>
+
+    <button id="decrement">-</button>
 
     <script src='main.js'></script>
 </body>
+
 </html>
