styled now time for functionality with js

--- a/index.html
+++ b/index.html
@@ -10,18 +10,22 @@
 </head>
 
 <body>
-    <h1>Counter-Example</h1>
+    <h1 class="header">Counter-Example</h1>
     <br />
 
     <nav class="bar">
         <h2 id="logo">Logo</h2>
         <h2 id="menu">Menu</h2>
     </nav>
-    <button id="increment">+</button>
+    <br />
 
-    <h2 id="number">0</h2>
+    <div class="counter-area">
+        <button id="remove">remove</button>
 
-    <button id="decrement">-</button>
+        <h2 id="number">0</h2>
+
+        <button id="add">Add</button>
+    </div>
 
     <script src='main.js'></script>
 </body>
