able to increment and decrement number, now to add image for it to inc and dec

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="counter-area">
         <button id="remove">remove</button>
 
-        <h2 id="number">0</h2>
+        <span id='num'></span>
 
         <button id="add">Add</button>
     </div>
