--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         <button id="add">Add</button>
     </div>
 
+    <div id="image">
+        
+    </div>
+
     <script src='main.js'></script>
 </body>
 
